<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/ville"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/code_postal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/rayon_de_recherche"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/cityText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:selectAllOnFocus="true"
                tools:ignore="LabelFor"
                tools:text="cityText" />

            <EditText
                android:id="@+id/zipCodeText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:selectAllOnFocus="true"
                android:text="zipCodeText"
                tools:ignore="HardcodedText,LabelFor" />

            <EditText
                android:id="@+id/radiusText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="20"
                tools:ignore="HardcodedText,LabelFor" />

        </LinearLayout>
    </LinearLayout>

    <Switch
        android:id="@+id/milesSwitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/utiliser_les_milles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/retour_la_page_principale"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>